--- a/nginx.conf
+++ b/nginx.conf
@@ -5,7 +5,7 @@ http {
         listen 80;
 
         location / {
-            proxy_pass http://my-express-cadt-2-master-express-1:3000;
+            proxy_pass http://pro-my-express-cadt:3000;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
