--- a/nginx/vhost.template
+++ b/nginx/vhost.template
@@ -8,8 +8,8 @@ http {
         ''      close;
     }
     upstream backend {
-        server localhost:3000;
-        #server ${EXPRESS_HOST_1}:${EXPRESS_PORT};
+       # server localhost:3000;
+        server ${EXPRESS_HOST_1}:${EXPRESS_PORT};
     }
     server {
         listen 3000;
